tests/NormalTests/paczka1/small_fuzzy/93893033.err
Error in line 5: zZzaoje S264 44,0
Error in line 11: hZsaPWWSc A890 4,0
Error in line 6: zZzaoje A890 92,1
